Second commit. Homepage and upvotes working. Questions still throwing error